--- a/Calendar/conf/application.conf
+++ b/Calendar/conf/application.conf
@@ -82,7 +82,7 @@ java.source=1.6
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-# db=mem
+db=mem
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
@@ -203,7 +203,6 @@ mail.smtp=mock
 # ~~~~~
 # If your text editor supports opening files by URL, Play! will
 # dynamically link error pages to files 
-#
 # Example, for textmate:
 # play.editor=txmt://open?url=file://%s&line=%s
 
@@ -214,4 +213,4 @@ mail.smtp=mock
 %test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 %test.jpa.ddl=create
 %test.mail.smtp=mock
-
+%test.db=mem
